Fix spacing and font sizes

--- a/src/components/ItemCard/ItemCard.scss
+++ b/src/components/ItemCard/ItemCard.scss
@@ -17,7 +17,7 @@
 	&__content {
 		align-items: center;
 		display: flex;
-		padding: 1.2rem 0 1.2rem 1.8rem;
+		padding: 1.2rem 0 1.3rem 1.8rem;
 	}
 	&__icon > span {
 		align-items: center;
@@ -44,6 +44,8 @@
 	&__extraInfo {
 		color: $color_b_extramedium;
 		font-size: $font_size_xxs;
+		line-height: 1.3rem;
+		margin-top: 0.4rem;
 	}
 	&__submenuOpen {
 		font-size: $font_size_l;
